--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This was created by Abdul Wahab. It uses to fetch weather data.</p>
         <img class="portrait" src="./img/robot.png" alt="">
     </div>
     {{>footer}}
